add styling and new logo

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -25,6 +25,9 @@ ul {
 .App {
   text-align: center;
 }
+.av {
+  font-family: "avenir next", avenir, sans-serif;
+}
 
 .bg-turq {
   background-color: #438eac;
